--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.1.5",
     "@nestjs/typeorm": "^11.0.0",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "nestjs-i18n": "^10.5.1",
     "npm-check-updates": "^18.0.2",
     "pg": "^8.16.3",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.1.14",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.25"
   },
@@ -41,6 +43,7 @@
     "@nestjs/testing": "^9.0.0",
     "@swc/cli": "^0.7.8",
     "@swc/core": "^1.13.2",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
