--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "dayjs": "^1.11.13",
     "nestjs-i18n": "^10.5.1",
     "npm-check-updates": "^18.0.2",
     "pg": "^8.16.3",
