--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nestjs-i18n": "^10.5.1",
     "npm-check-updates": "^18.0.2",
     "pg": "^8.16.3",
+    "query-string": "^9.2.2",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.25"
