--- a/package.json
+++ b/package.json
@@ -22,56 +22,56 @@
     "seed": "ts-node -r tsconfig-paths/register ./src/database/seeds/run-seed.ts"
   },
   "dependencies": {
-    "@casl/ability": "^6.7.3",
-    "@nestjs/common": "^11.1.5",
-    "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.1.5",
-    "@nestjs/jwt": "^11.0.0",
+    "@casl/ability": "6.7.3",
+    "@nestjs/common": "11.1.5",
+    "@nestjs/config": "4.0.2",
+    "@nestjs/core": "11.1.5",
+    "@nestjs/jwt": "11.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.1.5",
-    "@nestjs/typeorm": "^11.0.0",
-    "bcrypt": "^6.0.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
-    "dayjs": "^1.11.13",
-    "nestjs-i18n": "^10.5.1",
-    "npm-check-updates": "^18.0.2",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
-    "pg": "^8.16.3",
-    "query-string": "^9.2.2",
-    "reflect-metadata": "^0.1.14",
-    "rxjs": "^7.2.0",
-    "typeorm": "^0.3.25"
+    "@nestjs/passport": "11.0.5",
+    "@nestjs/platform-express": "11.1.5",
+    "@nestjs/typeorm": "11.0.0",
+    "bcrypt": "6.0.0",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.2",
+    "dayjs": "1.11.13",
+    "nestjs-i18n": "10.5.1",
+    "npm-check-updates": "18.0.2",
+    "passport": "0.7.0",
+    "passport-jwt": "4.0.1",
+    "passport-local": "1.0.0",
+    "pg": "8.16.3",
+    "query-string": "9.2.2",
+    "reflect-metadata": "0.1.14",
+    "rxjs": "7.2.0",
+    "typeorm": "0.3.25"
   },
   "devDependencies": {
-    "@nestjs/cli": "^11.0.7",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@swc/cli": "^0.7.8",
-    "@swc/core": "^1.13.2",
-    "@types/bcrypt": "^6.0.0",
-    "@types/express": "^4.17.13",
+    "@nestjs/cli": "11.0.7",
+    "@nestjs/schematics": "9.0.0",
+    "@nestjs/testing": "9.0.0",
+    "@swc/cli": "0.7.8",
+    "@swc/core": "1.13.2",
+    "@types/bcrypt": "6.0.0",
+    "@types/express": "4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
-    "@types/passport-local": "^1.0.38",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "@types/passport-local": "1.0.38",
+    "@types/supertest": "2.0.11",
+    "@typescript-eslint/eslint-plugin": "5.0.0",
+    "@typescript-eslint/parser": "5.0.0",
+    "eslint": "8.0.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "4.0.0",
     "jest": "29.5.0",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
+    "prettier": "2.3.2",
+    "source-map-support": "0.5.20",
+    "supertest": "6.1.3",
     "ts-jest": "29.1.0",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-loader": "9.2.3",
+    "ts-node": "10.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^5.5.3"
+    "typescript": "5.5.3"
   },
   "jest": {
     "moduleFileExtensions": [
