--- a/package.json
+++ b/package.json
@@ -35,16 +35,20 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
     "dayjs": "1.11.13",
+    "nest-winston": "^1.10.2",
     "nestjs-i18n": "10.5.1",
+    "nestjs-pino": "^4.4.0",
     "npm-check-updates": "18.0.2",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
     "pg": "8.16.3",
+    "pino-http": "^10.5.0",
     "query-string": "9.2.2",
     "reflect-metadata": "0.1.14",
     "rxjs": "7.2.0",
-    "typeorm": "0.3.25"
+    "typeorm": "0.3.25",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@nestjs/cli": "11.0.7",
