--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "6.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
+    "cookie-parser": "^1.4.7",
     "dayjs": "1.11.13",
     "nest-winston": "^1.10.2",
     "nestjs-i18n": "10.5.1",
