--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.1.5",
     "@nestjs/typeorm": "11.0.0",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "6.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
@@ -60,7 +61,8 @@
     "@types/bcrypt": "6.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "29.5.1",
-    "@types/node": "18.16.12",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^18.16.12",
     "@types/passport-local": "1.0.38",
     "@types/supertest": "2.0.11",
     "@typescript-eslint/eslint-plugin": "5.0.0",
