--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.1.5",
     "@nestjs/typeorm": "11.0.0",
-    "aws-sdk": "^2.1692.0",
     "bcrypt": "6.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
     "cookie-parser": "^1.4.7",
     "dayjs": "1.11.13",
+    "lodash": "^4.17.21",
     "nest-winston": "^1.10.2",
+    "nestjs-cls": "^6.0.1",
     "nestjs-i18n": "10.5.1",
     "nestjs-pino": "^4.4.0",
     "npm-check-updates": "18.0.2",
@@ -61,6 +62,7 @@
     "@types/bcrypt": "6.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "29.5.1",
+    "@types/lodash": "^4.17.20",
     "@types/multer": "^2.0.0",
     "@types/node": "^18.16.12",
     "@types/passport-local": "1.0.38",
