--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,10 @@ services:
       POSTGRES_PASSWORD: 123456
     volumes:
       - eng-center:/var/lib/postgresql/data
+  redis:
+    image: redis:7-alpine
+    ports:
+      - 6379:6379
   eng-center:
     build:
       context: .
