--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@casl/ability": "6.7.3",
+    "@nestjs/bullmq": "^11.0.3",
     "@nestjs/common": "11.1.5",
     "@nestjs/config": "4.0.2",
     "@nestjs/core": "11.1.5",
@@ -32,6 +33,7 @@
     "@nestjs/platform-express": "11.1.5",
     "@nestjs/typeorm": "11.0.0",
     "bcrypt": "6.0.0",
+    "bullmq": "^5.58.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
     "cookie-parser": "^1.4.7",
