init file module

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,41 @@
 #APP CONFIG
-APP_PORT=3000
-APP_NAME=NEST_JS_APP
+APP_PORT=8080
+APP_NAME=english-center
 NODE_ENV=development
 FRONTEND_DOMAIN=http://localhost:3000
 BACKEND_DOMAIN=http://localhost:3000
 
 #DATABASE CONFIG
-DATABASE_URL=database_url
-DATABASE_PORT=database_port
-DATABASE_USERNAME=username
-DATABASE_PASSWORD=password
-DATABASE_NAME=databasename
+DATABASE_HOST=your_database_host
+DATABASE_PORT=5432
+DATABASE_USERNAME=your_database_username
+DATABASE_PASSWORD=your_database_password
+DATABASE_NAME=your_database_name
+DATABASE_TYPE=postgres
 DATABASE_SSL_MODE=require
 DATABASE_CHANNEL_BINDING=require
 
 #JWT CONFIG
-JWT_ACCESS_SECRET=JUSTARANDOMSECRET
+JWT_ACCESS_SECRET=your_jwt_access_secret
 JWT_ACCESS_EXPIRATION_MINUTES=30m
-JWT_REFRESH_SECRET=REFRESHSECRET
+JWT_REFRESH_SECRET=your_jwt_refresh_secret
 JWT_REFRESH_EXPIRATION_DAYS=30d
-JWT_FORGOT_SECRET=FORGETSECRET
+JWT_FORGOT_SECRET=your_jwt_forgot_secret
 JWT_RESET_PASSWORD_EXPIRATION_MINUTES=10m
-JWT_CONFIRM_EMAIL_SECRET=CONFIRM_EMAIL_SECRET
+JWT_CONFIRM_EMAIL_SECRET=your_jwt_confirm_email_secret
 JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10m
+
+#REDIS CONFIG
+REDIS_HOST=your_redis_host
+REDIS_PORT=6379
+REDIS_USERNAME=your_redis_username
+REDIS_PASSWORD=your_redis_password
+
+#AWS S3 CONFIG
+AWS_ACCESS_KEY_ID=your_aws_access_key_id_or_minio
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key_or_minio
+AWS_REGION=ap-southeast-1
+AWS_BUCKET_NAME=your_s3_bucket_name
+
+#MINIO CONFIG
+MINIO_ENDPOINT=localhost
