--- a/.env.example
+++ b/.env.example
@@ -31,11 +31,11 @@ REDIS_PORT=6379
 REDIS_USERNAME=your_redis_username
 REDIS_PASSWORD=your_redis_password
 
-#AWS S3 CONFIG
-AWS_ACCESS_KEY_ID=your_aws_access_key_id_or_minio
-AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key_or_minio
-AWS_REGION=ap-southeast-1
-AWS_BUCKET_NAME=your_s3_bucket_name
+#CLOUDINARY CONFIG
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+CLOUDINARY_URL=cloudinary://your_api_key:your_api_secret@your_cloud_name
+CLOUDINARY_SECURE=true
+CLOUDINARY_FOLDER=english-center
 
-#MINIO CONFIG
-MINIO_ENDPOINT=localhost
