--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@casl/ability": "6.7.3",
     "@nestjs/bullmq": "^11.0.3",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "11.1.5",
     "@nestjs/config": "4.0.2",
     "@nestjs/core": "11.1.5",
@@ -34,6 +35,7 @@
     "@nestjs/typeorm": "11.0.0",
     "bcrypt": "6.0.0",
     "bullmq": "^5.58.0",
+    "cache-manager": "^7.2.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
     "cloudinary": "^2.7.0",
