--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.1.5",
+    "@nestjs/schedule": "^6.0.1",
     "@nestjs/typeorm": "11.0.0",
     "bcrypt": "6.0.0",
     "bullmq": "^5.58.0",
