--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_NAME=english-center
 NODE_ENV=development
 FRONTEND_DOMAIN=http://localhost:3000
 BACKEND_DOMAIN=http://localhost:3000
+TZ=Asia/Ho_Chi_Minh
 
 #DATABASE CONFIG
 DATABASE_HOST=your_database_host
