--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "dependencies": {
     "@casl/ability": "6.7.3",
-    "@nestjs/bullmq": "^11.0.3",
+    "@keyv/redis": "5.1.3",
+    "@nestjs/axios": "4.0.1",
+    "@nestjs/bullmq": "11.0.3",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "11.1.5",
     "@nestjs/config": "4.0.2",
@@ -34,19 +36,21 @@
     "@nestjs/platform-express": "11.1.5",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/typeorm": "11.0.0",
+    "axios": "^1.13.2",
     "bcrypt": "6.0.0",
-    "bullmq": "^5.58.0",
-    "cache-manager": "^7.2.0",
+    "bullmq": "5.58.0",
+    "cache-manager": "7.2.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "dayjs": "1.11.13",
-    "lodash": "^4.17.21",
-    "nest-winston": "^1.10.2",
-    "nestjs-cls": "^6.0.1",
+    "keyv": "5.5.3",
+    "lodash": "4.17.21",
+    "nest-winston": "1.10.2",
+    "nestjs-cls": "6.0.1",
     "nestjs-i18n": "10.5.1",
-    "nestjs-pino": "^4.4.0",
+    "nestjs-pino": "4.4.0",
     "npm-check-updates": "18.0.2",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
@@ -55,8 +59,8 @@
     "pino-http": "^10.5.0",
     "query-string": "9.2.2",
     "reflect-metadata": "0.1.14",
-    "rxjs": "7.2.0",
-    "typeorm": "0.3.25",
+    "rxjs": "7.8.2",
+    "typeorm": "^0.3.27",
     "winston": "^3.17.0"
   },
   "devDependencies": {
