feat(auth): add verify email and forgot password

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@nestjs/core": "11.1.5",
     "@nestjs/jwt": "11.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "11.0.5",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "11.1.5",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/typeorm": "11.0.0",
@@ -45,16 +45,18 @@
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "dayjs": "1.11.13",
+    "handlebars": "^4.7.8",
     "keyv": "5.5.3",
     "lodash": "4.17.21",
     "nest-winston": "1.10.2",
     "nestjs-cls": "6.0.1",
     "nestjs-i18n": "10.5.1",
     "nestjs-pino": "4.4.0",
+    "nodemailer": "^7.0.11",
     "npm-check-updates": "18.0.2",
-    "passport": "0.7.0",
+    "passport": "^0.7.0",
     "passport-jwt": "4.0.1",
-    "passport-local": "1.0.0",
+    "passport-local": "^1.0.0",
     "pg": "8.16.3",
     "pino-http": "^10.5.0",
     "query-string": "9.2.2",
@@ -64,7 +66,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "11.0.7",
+    "@nestjs/cli": "^11.0.12",
     "@nestjs/schematics": "9.0.0",
     "@nestjs/testing": "9.0.0",
     "@swc/cli": "0.7.8",
@@ -75,7 +77,8 @@
     "@types/lodash": "^4.17.20",
     "@types/multer": "^2.0.0",
     "@types/node": "^18.16.12",
-    "@types/passport-local": "1.0.38",
+    "@types/nodemailer": "^7.0.4",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "2.0.11",
     "@typescript-eslint/eslint-plugin": "5.0.0",
     "@typescript-eslint/parser": "5.0.0",
