--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@nestjs/jwt": "11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "11.1.5",
+    "@nestjs/platform-express": "^11.1.9",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/typeorm": "11.0.0",
     "axios": "^1.13.2",
@@ -54,6 +54,7 @@
     "nestjs-pino": "4.4.0",
     "nodemailer": "^7.0.11",
     "npm-check-updates": "18.0.2",
+    "otplib": "^12.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "4.0.1",
     "passport-local": "^1.0.0",
