--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
       - eng-center:/var/lib/postgresql/data
   redis:
     image: redis:7-alpine
+    command: ["redis-server", "--maxmemory", "512mb", "--maxmemory-policy", "allkeys-lru"]
+    mem_limit: 800m
+    mem_reservation: 256m
     ports:
       - 6379:6379
   eng-center:
