--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,13 @@ services:
       POSTGRES_PASSWORD: 123456
     volumes:
       - eng-center:/var/lib/postgresql/data
-  redis:
-    image: redis:7-alpine
-    command: ["redis-server", "--maxmemory", "512mb", "--maxmemory-policy", "allkeys-lru"]
-    mem_limit: 800m
-    mem_reservation: 256m
-    ports:
-      - 6379:6379
+  # redis:
+  #   image: redis:7-alpine
+  #   command: ["redis-server", "--maxmemory", "512mb", "--maxmemory-policy", "allkeys-lru"]
+  #   mem_limit: 800m
+  #   mem_reservation: 256m
+  #   ports:
+  #     - 6379:6379
   eng-center:
     build:
       context: .
