--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_DB: eng-center
       POSTGRES_USER: root
-      POSTGRES_PASSWORD: 123456
+      POSTGRES_PASSWORD: V9#rA!2mQ@7LkZ
     volumes:
       - eng-center:/var/lib/postgresql/data
   # redis:
@@ -28,7 +28,7 @@ services:
       - DATABASE_HOST=eng-center-db
       - DATABASE_PORT=5432
       - DATABASE_USERNAME=root
-      - DATABASE_PASSWORD=123456
+      - DATABASE_PASSWORD=V9#rA!2mQ@7LkZ
       - DATABASE_NAME=postgres
       - DATABASE_TYPE=postgres
       - DATABASE_SSL_MODE=false
